--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -113,6 +113,14 @@ strong {
                     background-color: $bcg-dark;
                 }
             }
+
+            &.help-controls {
+                position: absolute;
+                left: 0;
+                bottom: 45px;
+                background-color: $bcg-darker;
+            }
+
             &.designer-settings {
                 position: absolute;
                 left: 0;
@@ -2540,60 +2548,65 @@ strong {
     > .content {
         width: 480px;
         height: auto;
-        top: calc(50% - 200px);
+        top: calc(50% - 250px);
         left: calc(50% - 240px);
-        padding: 20px 20px;
-        background-color: $bcg-darkest;
+        padding: 0px 28px 28px 28px;
+        background-color: #fff;
 
         > .ui-panel > .content {
-            background-color: $bcg-darkest;
+            background-color: #fff;
 
             > .ui-label {
-                background-color: $bcg-darkest;
+                background-color: #fff;
                 display: block;
                 border: none;
                 padding: 0;
-                margin: 0 0 20px 0;
-            }
-
-            > .build-level {
-                font-size: 16px;
-                color: $text-active;
+                margin: 0 0 28px 0;
             }
 
             > .header {
-                font-size: 22px;
-                color: #fff;
+                font-size: 16px;
+                color: $text-active;
+
+                &:before {
+                    display: block;
+                    content: ' ';
+                    background-image: url(https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/images/bcg_primary.jpg);
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    background-size: cover;
+                    width: 100%;
+                    padding-left: 28px;
+                    padding-right: 28px;
+                    height: 110px;
+                    margin-left: -28px;
+                    margin-bottom: 28px;
+                }
             }
 
             > .main {
                 display: block;
-                line-height: 1;
-                .font-icon {
-                    background-color: #4a5a5d;
-                    padding: 5px;
-                    width: 20px;
-                    height: 20px;
-                    line-height: 20px;
-                    text-align: center;
-                    display: inline-block;
-                    color: #fff;
-                    margin-left: 5px;
-                    margin-right: 5px;
-                    font-size: 20px;
-
-                    &.launch {
-                        background-color: $text-active;
-                    }
-                }
+                line-height: 28px;
+                color: $text-darkest;
+                font-size: 18px;
+                @extend .font-bold;
             }
 
             > .close {
+                @extend .font-bold;
+                font-size: 12px;
                 background-color: #4a5a5d;
                 width: 80px;
                 height: 40px;
                 line-height: 40px;
                 text-align: center;
+                color: #fff;
+
+                &:hover {
+                    background-color: $text-active;
+                    border-color: $text-active;
+                    color: $text-primary;
+                }
             }
         }
     }
