--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2568,8 +2568,12 @@ strong {
 
                 > .ui-menu-item {
 
-                    &.focused {
-                        background-color: $bcg-primary;
+                    &:hover > .title {
+                        background-color: transparent;
+                    }
+
+                    &.focused > .title {
+                        background-color: $text-darkest;
                     }
 
                     > .title {
