--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2717,7 +2717,7 @@ strong {
         width: 512px;
         height: auto;
         left: calc(50% - 256px);
-        top: calc(50% - 296px);
+        top: calc(50% - 335px);
 
         > .header {
             display: block;
@@ -2772,8 +2772,9 @@ strong {
             }
             > .buttons {
                 float: left;
-                width: 112px;
+                width: 125px;
                 margin: 5px;
+                white-space: nowrap;
 
                 > .button {
                     float: left;
