--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -116,8 +116,8 @@ a:visited {
             &:after {
                 right: auto;
                 left: 0;
-                content: '\E113';
-                @extend .font-icon;
+                content: '\E180';
+                @extend .font-pc-icon;
                 font-size: 14px;
                 text-align: center;
                 margin: 0;
@@ -252,11 +252,11 @@ a:visited {
     &.container {
         // plus icon
         > .title:before {
-            content: '\E464';
+            content: '\E120';
             width: 16px;
             height: 16px;
             margin: 3px;
-            @extend .font-icon;
+            @extend .font-pc-icon;
             font-size: 10px;
             text-align: center;
             color: $text-secondary;
@@ -273,7 +273,7 @@ a:visited {
         // minus icon
         &.open {
             > .title:before {
-                content: '\E465';
+                content: '\E121';
                 color: $text-secondary;
                 background-color: $bcg-dark;
             }
@@ -454,9 +454,9 @@ a:visited {
     }
     &.container {
         > .title:after {
-            content: '\E113';
-            @extend .font-icon;
-            font-size: 14px;
+            content: '\E160';
+            @extend .font-pc-icon;
+            font-size: 16px;
             text-align: center;
             background-color: transparent;
             color: $text-dark;
@@ -492,7 +492,7 @@ a:visited {
             }
         }
         > .icon {
-            @extend .font-icon;
+            @extend .font-pc-icon;
             font-size: 14px;
             text-align: center;
             background-color: transparent;
@@ -896,7 +896,7 @@ a:visited {
             color: $text-primary;
 
             &:after {
-                content: '\E113';
+                content: '\E159';
                 color: $text-active;
             }
         }
@@ -905,18 +905,17 @@ a:visited {
         color: $text-secondary;
 
         &:after {
-            content: '\E113';
+            content: '\E159';
             width: 22px;
             height: 22px;
             line-height: 20px;
             padding: 0;
             margin: 0;
-            @extend .font-icon;
+            @extend .font-pc-icon;
             font-size: 18px;
             text-align: center;
             color: $text-darkest;
             background-color: transparent;
-            transform: rotate(90deg);
         }
     }
     > ul {
